# apps.home.boot-animation

./: AUTHORS  CMakeLists.txt  LICENSE.Flora  Makefile.test  NOTICE  boot-animation.efl  boot-animation.manifest  test.c
data/: mobile_make_def.sh  mobile_poweroff.edc  mobile_poweroff1.edc  mobile_poweroff1_image.h  mobile_poweroff1_part.h  mobile_poweroff_image.h  mobile_poweroff_part.h  mobile_poweron.edc  mobile_poweron1.edc  mobile_poweron1_image.h  mobile_poweron1_part.h  mobile_poweron_image.h  mobile_poweron_part.h  poweroff.edc  poweroff_360x480.edc  poweroff_360x480_image.h  poweroff_360x480_part.h  poweroff_480x800.edc  poweroff_480x800_image.h  poweroff_480x800_part.h  poweroff_image.h  poweroff_micro_part.h  poweroff_part.h  poweroff_sdk_micro.edc  poweron.edc  poweron_360x480.edc  poweron_360x480_image.h  poweron_360x480_part.h  poweron_480x800.edc  poweron_480x800_image.h  poweron_480x800_part.h  poweron_image.h  poweron_part.h  poweron_sdk_micro_part.h  wearable_poweroff.edc  wearable_poweroff_image.h  wearable_poweroff_part.h  wearable_poweron.edc  wearable_poweron_image.h  wearable_poweron_part.h
data/default/: poweron.edc  poweron_part.h
data/image/emul/: 1X1_poweroff.edj  1X1_poweron.edj  3X4_poweroff.edj  3X4_poweron.edj
debian/: boot-animation.postinst  changelog  control  copyright  rules
include/: animation.h  avsys.h  boot-animation.h  boot.h  log.h  wav_parser.h  wav_player.h
mobile/: CMakeLists.txt  NOTICE  boot-ani
mobile/data/: poweroff.edc  poweroff_image.h  poweroff_part.h  poweron.edc  poweron_image.h  poweron_part.h
mobile/include/: animation.h  boot-animation.h
mobile/src/: animation.c  boot-animation.c
packaging/: boot-animation-mobile.service  boot-animation-wearable.service  boot-animation.changes  boot-animation.service  boot-animation.spec  late-tizen-system.service  shutdown-animation.service  silent-animation.service
src/: animation.c  boot-animation.c  boot.c
wearable/: CMakeLists.txt  boot-animation.manifest  test.c
wearable/data/: poweroff_image.h  poweroff_micro.edc  poweroff_micro_image.h  poweroff_sdk_micro_image.h  poweroff_sdk_micro_part.h  poweron.edc  poweron_image.h  poweron_micro.edc  poweron_micro_image.h  poweron_micro_part.h  poweron_part.h  poweron_sdk_micro.edc  poweron_sdk_micro_image.h
wearable/data/default/: poweroff.edc  poweroff_part.h  poweron_image.h
wearable/data/haptic/: short.ivt
wearable/data/orange/: poweron.edc  poweron_image.h  poweron_part.h
wearable/include/: boot-animation.h  wav_parser.h  wav_player.h
wearable/src/: animation.c  boot-animation.c
